crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__compile_script_setup_with_define_model_array_destructure.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from 'vue'
import { useModel as _useModel } from 'vue'

const __sfc__ = /*@__PURE__*/_defineComponent({
  __name: 'Test',
  props: {
    "modelValue": {},
  },
  emits: ["update:modelValue"],
  setup(__props, { expose: __expose, emit: __emit }) {
  __expose();
  const [model, modifiers] = _useModel(__props, "modelValue")
  const __returned__ = { model, modifiers }
  Object.defineProperty(__returned__, '__isScriptSetup', { enumerable: false, value: true })
  return __returned__
  }

});
