crates/vize_atelier_sfc/src/compile_script/snapshots/vize_atelier_sfc__compile_script__tests__compile_script_tests__compile_script_setup_with_define_props.snap
---
source: crates/vize_atelier_sfc/src/compile_script/tests.rs
expression: result.code.as_str()
---
import { defineComponent as _defineComponent } from "vue";
import { ref } from "vue";
const __sfc__ = /*@__PURE__*/ _defineComponent({
  __name: "Test",
  props: ["msg"],
  setup(__props, { expose: __expose, emit: __emit }) {
    __expose();
    const props = __props;
    const count = ref(0);
    const __returned__ = {
      count,
      msg,
      ref
    };
    Object.defineProperty(__returned__, "__isScriptSetup", {
      enumerable: false,
      value: true
    });
    return __returned__;
  }
});
